# QKernel-Benchmark

./: .gitignore  Benchmark_Report.md  Plan.md  README.md  pyproject.toml  requirements.txt  test_metrics.py  test_metrics_pi.py  test_overlap.py  test_zz.py  test_zz2.py
benchmark/: __init__.py  metrics.py  runner.py
classifiers/: __init__.py  qkrr.py  qsvm.py
datasets/: __init__.py  loader.py
experiments/: run_all.py  run_single.py
feature_maps/: __init__.py  base.py  iqp_map.py  rx_map.py  zz_map.py
kernels/: __init__.py  base.py  fidelity_kernel.py  projected_kernel.py  qflair_kernel.py  trainable_kernel.py
tests/: test_classifiers.py  test_datasets.py  test_kernels.py
