[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkernel-benchmark"
version = "0.1.0"
description = "Benchmark suite for quantum kernel methods on HEP classification datasets"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Quantum computing
    "qiskit>=2.0",
    "qiskit-aer>=0.16",
    "qiskit-machine-learning>=0.8",

    # Numerics / ML
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pandas>=2.0",

    # Datasets
    "EnergyFlow>=1.3",
    "ucimlrepo>=0.0.6",
    "h5py>=3.9",

    # Plotting / UX
    "matplotlib>=3.8",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "psutil",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kernels*", "feature_maps*", "classifiers*", "datasets*", "benchmark*", "experiments*"]
